--- a/SISTEMA_COBRO/SISTEMA_COBRO.csproj
+++ b/SISTEMA_COBRO/SISTEMA_COBRO.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="conexion.cs" />
+    <Compile Include="DatosGetUsuarios.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
